# ellalang

./: Cargo.toml  README.md
ella/: Cargo.toml
ella-parser/: Cargo.toml
ella-parser/benches/: parser.rs
ella-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  visitor.rs
ella-parser/src/parser/: expr.rs  stmt.rs
ella-parser/src/parser/snapshots/: ella_parser__parser__expr__tests__binary-associativity-2.snap  ella_parser__parser__expr__tests__binary-associativity.snap  ella_parser__parser__expr__tests__binary-equality.snap  ella_parser__parser__expr__tests__binary.snap  ella_parser__parser__expr__tests__bool-lit-false.snap  ella_parser__parser__expr__tests__bool-lit-true.snap  (+24 more)
ella-parser/src/snapshots/: ella_parser__parser__tests__binary-associativity-2.snap  ella_parser__parser__tests__binary-associativity.snap  ella_parser__parser__tests__binary-equality.snap  ella_parser__parser__tests__binary.snap  ella_parser__parser__tests__bool-lit-false.snap  ella_parser__parser__tests__bool-lit-true.snap  ella_parser__parser__tests__double-2.0.snap  ella_parser__parser__tests__double-2.5.snap  ella_parser__parser__tests__fn-call-with-args.snap  ella_parser__parser__tests__fn-call-with-nested-args.snap  ella_parser__parser__tests__fn-call.snap  ella_parser__parser__tests__identifier.snap  ella_parser__parser__tests__int.snap
ella-passes/: Cargo.toml
ella-vm/: Cargo.toml
ella-vm/src/: chunk.rs  codegen.rs  disassemble.rs  lib.rs  value.rs  vm.rs
ella-vm/src/value/: object.rs
ella/src/: builtin_functions.rs  lib.rs  main.rs
ella/tests/: integration_tests.rs
(+10 files in other folders)
