[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "ella-parser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ella-source = {path = "../ella-source"}
insta = "1.3.0"
logos = "0.11.4"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
harness = false
name = "parser"
