[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "ella-vm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ella-parser = {path = "../ella-parser"}
enum-primitive-derive = "0.2.1"
num-traits = "0.2.14"
