[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "ella"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ella-parser = {path = "../ella-parser"}
ella-passes = {path = "../ella-passes"}
ella-source = {path = "../ella-source"}
ella-value = {path = "../ella-value"}
ella-vm = {path = "../ella-vm"}
logos = "0.11.4"
